--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^10.0.17",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-test-renderer": "^16.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
